--- a/app/frontend/template/header.tmpl
+++ b/app/frontend/template/header.tmpl
@@ -21,19 +21,20 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Categories
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">T-shirt</a></li>
-                        <li><a class="dropdown-item" href="#">Sticker</a></li>
+                        <li><a class="dropdown-item" href="#">Garage Kits</a></li>
+                        <li><a class="dropdown-item" href="#">Pendant</a></li>
+                        <li><a class="dropdown-item" href="#">Phone Shell</a></li>
                     </ul>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" >About</a>
+                        <a class="nav-link" href="/about">About</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -51,7 +52,11 @@
                     </div>
                     <ul class="dropdown-menu dropdown-menu-end">
                         <li><a class="dropdown-item" href="#"><i class="fa-solid fa-box me-2"></i>Order Center</a></li>
-                        <li><a class="dropdown-item" href="/auth/logout"><i class="fa-solid fa-right-from-bracket me-2"></i>Logout</a></li>
+                        <li>
+                            <form action="/auth/logout" method="post">
+                                <button class="dropdown-item" type="submit"><i class="fa-solid fa-right-from-bracket me-2"></i>Logout</button>
+                            </form>
+                        </li>
                       </ul>
                 </div>
 
